@@ -1,4 +1,4 @@
-(* $Id: roots.ml,v 1.5 2013-03-29 10:21:54 deraugla Exp $ *)
+(* $Id: roots.ml,v 1.6 2013-03-29 13:52:30 deraugla Exp $ *)
 
 open Printf;
 open Pnums;
@@ -8,7 +8,7 @@ open Field;
 
 value quiet = ref True;
 
-value rebuild_add_list_z k cpl =
+value rebuild_add_list_y k cpl =
   let rebuild_add t (c₁, p₁) =
     if k.eq c₁ k.zero then t
     else
@@ -359,7 +359,7 @@ value roots_of_c_coeffs k cpl coeffs =
       [ (Some a, Some b, Some c) →
           roots_of_2nd_deg_polynom_with_algebraic_coeffs k a b c
       | _ →
-          let polyn = rebuild_add_list_z k cpl in
+          let polyn = rebuild_add_list_y k cpl in
           failwith
             (sprintf "cannot compute roots of '%s'"
                (string_of_tree k True "x" "y" polyn)) ]
@@ -368,7 +368,7 @@ value roots_of_c_coeffs k cpl coeffs =
       match algeb_nb with
       [ Some x →
           let t = Mult (Const (k.of_a x)) (Ypower 1) in
-          let polyn = rebuild_add_list_z k cpl in
+          let polyn = rebuild_add_list_y k cpl in
           let polyn₂ = substitute_y k t polyn in
           let polyn₂ = normalize k polyn₂ in
           let cplpl = group k polyn₂ in
@@ -390,7 +390,7 @@ value roots_of_c_coeffs k cpl coeffs =
           in
           match cnl_opt with
           [ Some cnl →
-              let polyn = rebuild_add_list_z k cnl in
+              let polyn = rebuild_add_list_y k cnl in
               failwith
                 (sprintf "not impl substituted polynomial %s"
                    (string_of_tree k True "x" "y" polyn))
@@ -399,7 +399,7 @@ value roots_of_c_coeffs k cpl coeffs =
                 (sprintf "cannot compute roots of '%s'\n%!"
                    (string_of_tree k True "x" "y" polyn)) ]
       | None →
-          let polyn = rebuild_add_list_z k cpl in
+          let polyn = rebuild_add_list_y k cpl in
           failwith
             (sprintf "cannot compute roots of '%s'\n%!"
                (string_of_tree k True "x" "y" polyn)) ];
@@ -540,7 +540,7 @@ value roots k cpl = do {
   let g = List.fold_left (fun g (c, _) → k.gcd g c) k.zero cpl in
   let cpl = List.map (fun (c, p) → (k.div c g, p / power_gcd)) cpl in
   if not quiet.val then do {
-    let polyn = rebuild_add_list_z k cpl in
+    let polyn = rebuild_add_list_y k cpl in
     if power_gcd = 1 then
       printf "resolving %s=0\n%!" (string_of_tree k True "x" "c" polyn)
     else
